@@ -463,7 +463,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
         // one chunk that fills up the partial chunk.
         //
         computePacketChunkSize(0, freeInCksum);
-        resetChecksumChunk(freeInCksum);
+        setChecksumBufSize(freeInCksum);
         appendChunk = true;
       } else {
         // if the remaining space in the block is smaller than
@@ -1745,11 +1745,10 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
     return value;
   }
 
-  private DFSOutputStream(DFSClient dfsClient, String src, Progressable progress, HdfsFileStatus stat,
-      DataChecksum checksum, boolean saveSmallFilesInDB,
-      final int dbFileMaxSize)
-          throws IOException {
-    super(checksum, checksum.getBytesPerChecksum(), checksum.getChecksumSize());
+  private DFSOutputStream(DFSClient dfsClient, String src, Progressable progress,
+      HdfsFileStatus stat, DataChecksum checksum, boolean saveSmallFilesInDB,
+      final int dbFileMaxSize) throws IOException {
+    super(checksum);
     this.dfsClient = dfsClient;
     this.src = src;
     this.fileId = stat.getFileId();
@@ -2046,21 +2045,20 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
   // @see FSOutputSummer#writeChunk()
   @Override
   protected synchronized void writeChunk(byte[] b, int offset, int len,
-                                         byte[] checksum) throws IOException {
+      byte[] checksum, int ckoff, int cklen) throws IOException {
     dfsClient.checkOpen();
     checkClosed();
 
-    int cklen = checksum.length;
-    int bytesPerChecksum = this.checksum.getBytesPerChecksum();
+    int bytesPerChecksum = this.checksum.getBytesPerChecksum(); 
     if (len > bytesPerChecksum) {
       throw new IOException("writeChunk() buffer size is " + len +
               " is larger than supported  bytesPerChecksum " +
               bytesPerChecksum);
     }
-    if (checksum.length != this.checksum.getChecksumSize()) {
+    if (cklen != this.checksum.getChecksumSize()) {
       throw new IOException("writeChunk() checksum size is supposed to be " +
-              this.checksum.getChecksumSize() +
-              " but found to be " + checksum.length);
+                            this.checksum.getChecksumSize() + 
+                            " but found to be " + cklen);
     }
 
     if (currentPacket == null) {
@@ -2077,7 +2075,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       }
     }
 
-    currentPacket.writeChecksum(checksum, 0, cklen);
+    currentPacket.writeChecksum(checksum, ckoff, cklen);
     currentPacket.writeData(b, offset, len);
     currentPacket.numChunks++;
     bytesCurBlock += len;
@@ -2101,7 +2099,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       // crc chunks from now on.
       if (appendChunk && bytesCurBlock % bytesPerChecksum == 0) {
         appendChunk = false;
-        resetChecksumChunk(bytesPerChecksum);
+        resetChecksumBufSize();
       }
 
       if (!appendChunk) {
@@ -2191,21 +2189,15 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
       long lastBlockLength = -1L;
       boolean updateLength = syncFlags.contains(SyncFlag.UPDATE_LENGTH);
       synchronized (this) {
-        /* Record current blockOffset. This might be changed inside
-         * flushBuffer() where a partial checksum chunk might be flushed.
-         * After the flush, reset the bytesCurBlock back to its previous value,
-         * any partial checksum chunk will be sent now and in next packet.
-         */
-        long saveOffset = bytesCurBlock;
-        Packet oldCurrentPacket = currentPacket;
         // flush checksum buffer, but keep checksum buffer intact
-        flushBuffer(true);
+        int numKept = flushBuffer(true, true);
         // bytesCurBlock potentially incremented if there was buffered data
 
         if (DFSClient.LOG.isDebugEnabled()) {
-          DFSClient.LOG.debug("DFSClient flush() : saveOffset " + saveOffset +
-                  " bytesCurBlock " + bytesCurBlock +
-                  " lastFlushOffset " + lastFlushOffset);
+          DFSClient.LOG.debug(
+            "DFSClient flush() :" +
+            " bytesCurBlock " + bytesCurBlock +
+            " lastFlushOffset " + lastFlushOffset);
         }
         // Flush only if we haven't already flushed till this offset.
         if (lastFlushOffset != bytesCurBlock) {
@@ -2220,14 +2212,6 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
                 getChecksumSize());
           }
         } else {
-          // We already flushed up to this offset.
-          // This means that we haven't written anything since the last flush
-          // (or the beginning of the file). Hence, we should not have any
-          // packet queued prior to this call, since the last flush set
-          // currentPacket = null.
-          assert oldCurrentPacket ==
-                  null : "Empty flush should not occur with a currentPacket";
-
           if (isSync && bytesCurBlock > 0) {
             // Nothing to send right now,
             // and the block was partially written,
@@ -2247,7 +2231,7 @@ public class DFSOutputStream extends FSOutputSummer implements Syncable, CanSetD
         // Restore state of stream. Record the last flush offset 
         // of the last full chunk that was flushed.
         //
-        bytesCurBlock = saveOffset;
+        bytesCurBlock -= numKept;
         toWaitFor = lastQueuedSeqno;
       } // end synchronized
 
